--- a/index.html
+++ b/index.html
@@ -3,8 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <title>PAP</title>
+
+    <link href="main/css/main.css" rel="stylesheet" type="text/css">
+    <link href="main/css/menu.css" rel="stylesheet" type="text/css">
 </head>
 <body>
+
+
+<div id="pagina">
+
+    <div id="menu">
+        <a id="a_logo" class="logo" href="index.html"><img id="i_logo" class="logo" src="main/logo.png" alt="logo.png"></a>
+    </div>
+
+    <div id="c">
+        <div id="centro">
+            <div id="titulo">
+                <h1 id="t1">Prova de Aptidão Profissional </h1>
+                <h3 id="t2">2021 - Tomás Duarte </h3>
+            </div>
+
+            <div id="cc">
+
+                <p>Projeto desenvolvido no âmbito da Prova de Aptidão Profissional (PAP) durante o 12º ano de escolaridade.<br>
+                    O projeto é constituído por um Website e uma aplicação para o sistema operativo Android, ambos
+                    funcionam em conjunto.<br>
+                    Permite ao utilizador pesquisar por serviços/atividades adicionadas pelos utilizadores, descobrir vários
+                    detalhes das mesmas e deixar classificações.<br>
+                    Este projeto utiliza as linguagens de programação HTML, CSS, Javascript, PHP, MySQL e Java para Android.</p>
+            </div>
+
+            <a></a>
+
+
+        </div>
+    </div>
+</div>
+
+
 
 </body>
 </html>
