--- a/index.html
+++ b/index.html
@@ -31,9 +31,14 @@
                     Permite ao utilizador pesquisar por serviços/atividades adicionadas pelos utilizadores, descobrir vários
                     detalhes das mesmas e deixar classificações.<br>
                     Este projeto utiliza as linguagens de programação HTML, CSS, Javascript, PHP, MySQL e Java para Android.</p>
+                <br>
+                <div id="cb">
+                    <a href="ficheiros/apresentação.pdf"><button class="bf">Ver a apresentação</button></a>
+                    <br>
+                    <a href="ficheiros/relatorio.pdf"><button class="bf">Ver o relatório</button></a>
+                </div>
             </div>
 
-            <a></a>
 
 
         </div>
